--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
         <!-- display -->
         <section class="display-area">
           <div class="text-area">
-            <span type="text" class="pre-text" id="display-pre">para</span>
-            <input type="text" class="curr-text" id="display-curr" />
+            <p type="text" class="pre-text" id="display-pre"></p>
+            <input
+              Editable="true"
+              type="text"
+              class="curr-text"
+              id="display-curr"
+            />
           </div>
         </section>
         <hr class="display-hr" />
@@ -59,5 +64,8 @@
         </section>
       </div>
     </div>
+
+    <!-- script tag -->
+    <script src="/app.js"></script>
   </body>
 </html>
