--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./style/index.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -66,6 +66,6 @@
     </div>
 
     <!-- script tag -->
-    <script src="/app.js"></script>
+    <script src="./script/app.js"></script>
   </body>
 </html>
